# duan-simulate

./: .gitignore  Cargo.toml  DESIGN-NEXT.md  README.md
.claude/: settings.local.json
.claude/agents/: arch-designer.md  architecture-auditor.md  core-maintainer.md  framework-consumer.md
ISSUES/: ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  ISSUE-005.md  ISSUE-006.md  ISSUE-007.md  ISSUE-008.md  ISSUE-009.md  ISSUE-010.md  ISSUE-011.md  ISSUE-012.md  ISSUE-013.md  ISSUE-014.md  ISSUE-015.md  ISSUE-016.md  ISSUE-017-domain-context-missing-spawn-destroy.md  ISSUE-018-string-based-dependencies-no-compile-check.md  ISSUE-019-no-standalone-test-debug-support.md  ISSUE-020-on-attach-on-detach-missing-guidance.md  ISSUE-021-domain-write-boundary-not-enforced.md  ISSUE-022-unsafe-raw-pointer-in-compute-domains.md  ISSUE-023-nondeterministic-domain-execution-order.md  ISSUE-024-world-public-fields-undermine-authority-boundary.md  ISSUE-025-entity-add-remove-domain-post-spawn-misleading.md  ISSUE-026-entity-spawned-event-is-dead-code.md  ISSUE-027-on-attach-on-detach-asymmetric-design.md  ISSUE-028-component-type-required-but-debug-only.md  ISSUE-TEMPLATE.md
docs/duan-docs/: index.md
examples/: free_fall.rs
examples/free_fall/: Cargo.toml
examples/naval_combat/: Cargo.toml
src/: component.rs  domain.rs  entity.rs  events.rs  lib.rs  logging.rs  prelude.rs  scheduler.rs  time.rs  type_set.rs  world.rs
src/component/: mod.rs  storage.rs
src/derive/: mod.rs
src/diagnostics/: mod.rs
src/domain/: context.rs  mod.rs
src/entity/: context.rs  id.rs  mod.rs
(+115 files in other folders)
